add CR\UD controller delete method get.ById(id) changes files UserConfiguration and application.properties

--- a/src/main/resources/templates/all.html
+++ b/src/main/resources/templates/all.html
@@ -5,7 +5,7 @@
     <title>All Users</title>
 </head>
 <body>
-<form>
+<div>
 <table>
     <thead>
     <tr>
@@ -13,7 +13,7 @@
         <th>Name</th>
         <th>Age</th>
         <th>LinkUser</th>
-        <th>delite!</th>
+        <th>DeleteUser</th>
     </tr>
     </thead>
     <tbody>
@@ -24,21 +24,23 @@
         <td><a th:href="@{/read/{id}(id=${users.getId()})}" th:text="${users.getName()}">user</a></td>
         <td>
             <form th:method="POST" th:action="@{/read/delite/{id}(id=${users.id})}">
-            <input type="submit" value="Delite!"/>
+            <input type="submit" value="Delete!"/>
             </form>
         </td>
     </tr>
     </tbody>
 </table>
-</form>
-<form>
+</div>
+
+<div>
     <br/>
     <h3>Create new user</h3>
+</div>
+<div>
     <form th:method="GET" th:action="@{/read/new}">
         <input type="submit" value="Create!"/>
     </form>
-</form>
-
+</div>
 
 </body>
 </html>
