--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -5,6 +5,10 @@
     <title>NEW</title>
 </head>
 <body>
+<div>
+    <br/>
+    <h3>Create new user</h3>
+</div>
 <form th:method="POST"  th:action="@{/read}" th:object="${user}">
   <label  for="name">Enter name: </label>
   <input type="text" th:field="*{name}"  id="name">
@@ -14,7 +18,5 @@
   <br/>
   <input type="submit" value="Create!"/>
 </form>
-
-
 </body>
 </html>
