--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -13,7 +13,7 @@
     <label  for="age">Enter age: </label>
     <input type="text" th:field="*{age}"  id="age">
     <br/>
-    <input type="submit" value="Update!"/>
+    <input type="submit" value="Update and return!"/>
 </form>
 
 </body>
